// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button snapshot test 1`] = `
<button
  className="global-button font-bold"
  id="test"
  onClick={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Button snapshot test with children 1`] = `
<button
  className="global-button font-bold"
  id="test"
  onClick={[Function]}
  type="button"
>
  Button
  <span>
    Test child
  </span>
</button>
`;
